--- a/01.html
+++ b/01.html
@@ -3,7 +3,7 @@
 
 <link href="/css/css.css?v=_-Zdhs7M8u7f55Y69iMShzzkRz-vmRsQjoeuv6YWVj81" rel="stylesheet"/>
 
-<script src="/css/rem.js?v=O7vK5HMpFTmxrUEwW2RTfW7RVQTK76pUDaRgczToVp41"></script>
+<script src="/js/rem.js?v=O7vK5HMpFTmxrUEwW2RTfW7RVQTK76pUDaRgczToVp41"></script>
 
 <!DOCTYPE html>
 <html lang="en">
